Make sure find bar is visible when --find command line option is used

Move the code to start the initial search to ev_window_setup_document()
so that it will be called also when the view is reloaded and do not grab
the focus on the view when there's an initial search to keep the find
bar open.

https://bugzilla.gnome.org/show_bug.cgi?id=604327