shell/ev-window.c
@@ -1450,11 +1450,19 @@ ev_window_setup_document (EvWindow *ev_window)
 						    options & EV_FIND_CASE_SENSITIVE);
 		egg_find_bar_enable_whole_words_only (EGG_FIND_BAR (ev_window->priv->find_bar),
 						      options & EV_FIND_WHOLE_WORDS_ONLY);
+
+		if (ev_window->priv->search_string &&
+		    !EV_WINDOW_IS_PRESENTATION (ev_window)) {
+			ev_window_show_find_bar (ev_window);
+			egg_find_bar_set_search_string (EGG_FIND_BAR (ev_window->priv->find_bar), ev_window->priv->search_string);
+		}
+
+		g_clear_pointer (&ev_window->priv->search_string, g_free);
 	}
 
 	if (EV_WINDOW_IS_PRESENTATION (ev_window))
 		gtk_widget_grab_focus (ev_window->priv->presentation_view);
-	else
+	else if (!gtk_widget_get_visible (ev_window->priv->find_bar))
 		gtk_widget_grab_focus (ev_window->priv->view);
 
 	return FALSE;
@@ -1630,16 +1638,6 @@ ev_window_load_job_cb (EvJob *job,
 		        default:
 				break;
 		}
-
-		if (ev_window->priv->search_string && EV_IS_DOCUMENT_FIND (document) &&
-		    ev_window->priv->window_mode != EV_WINDOW_MODE_PRESENTATION) {
-			ev_window_show_find_bar (ev_window);
-			egg_find_bar_set_search_string (EGG_FIND_BAR (ev_window->priv->find_bar),
-							ev_window->priv->search_string);
-		}
-
-		g_free (ev_window->priv->search_string);
-		ev_window->priv->search_string = NULL;
 
 		/* Create a monitor for the document */
 		ev_window->priv->monitor = ev_file_monitor_new (ev_window->priv->uri);
